[WinCairo] Accelerated compositing does not respect device scale factor. https://bugs.webkit.org/show_bug.cgi?id=148085

Reviewed by Brent Fulgham.

Scale root layer's transformation matrix with device scale factor.

* WebCoreSupport/AcceleratedCompositingContext.cpp:
(AcceleratedCompositingContext::initialize):
(AcceleratedCompositingContext::startedAnimation):
(AcceleratedCompositingContext::applyDeviceScaleFactor):
(AcceleratedCompositingContext::compositeLayersToContext):
(AcceleratedCompositingContext::resizeRootLayer):
(AcceleratedCompositingContext::flushAndRenderLayers):
(AcceleratedCompositingContext::paintContents):
(AcceleratedCompositingContext::deviceScaleFactor):
* WebCoreSupport/AcceleratedCompositingContext.h:
* WebView.cpp:
(WebView::repaint):


Canonical link: https://commits.webkit.org/166199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188537 268f45cc-cd09-0410-ab3c-d52691b4dbfc