Source/WebKit/win/WebCoreSupport/AcceleratedCompositingContext.cpp
@@ -82,6 +82,8 @@ void AcceleratedCompositingContext::initialize()
     m_rootLayer->setDrawsContent(false);
     m_rootLayer->setSize(pageSize);
 
+    applyDeviceScaleFactor();
+
     // The non-composited contents are a child of the root layer.
     m_nonCompositedContentLayer = GraphicsLayer::create(nullptr, *this);
     m_nonCompositedContentLayer->setDrawsContent(true);
@@ -148,6 +150,22 @@ bool AcceleratedCompositingContext::startedAnimation(WebCore::GraphicsLayer* lay
         return false;
 
     return downcast<GraphicsLayerTextureMapper>(*layer).layer().descendantsOrSelfHaveRunningAnimations();
+}
+
+void AcceleratedCompositingContext::applyDeviceScaleFactor()
+{
+    if (!m_rootLayer)
+        return;
+
+    const FloatSize& size = m_rootLayer->size();
+
+    TransformationMatrix m;
+    m.scale(deviceScaleFactor());
+    // Center view
+    double tx = (size.width() - size.width() / deviceScaleFactor()) / 2.0;
+    double ty = (size.height() - size.height() / deviceScaleFactor()) / 2.0;
+    m.translate(tx, ty);
+    m_rootLayer->setTransform(m);
 }
 
 void AcceleratedCompositingContext::compositeLayersToContext(CompositePurpose purpose)
@@ -221,6 +239,8 @@ void AcceleratedCompositingContext::resizeRootLayer(const IntSize& newSize)
         return;
 
     m_rootLayer->setSize(newSize);
+
+    applyDeviceScaleFactor();
 
     // If the newSize exposes new areas of the non-composited content a setNeedsDisplay is needed
     // for those newly exposed areas.
@@ -358,6 +378,7 @@ void AcceleratedCompositingContext::flushAndRenderLayers()
     Frame& frame = core(&m_webView)->mainFrame();
     if (!frame.contentRenderer() || !frame.view())
         return;
+
     frame.view()->updateLayoutAndStyleIfNeededRecursive();
 
     if (!enabled())
@@ -387,6 +408,11 @@ void AcceleratedCompositingContext::paintContents(const GraphicsLayer*, Graphics
     context.clip(rectToPaint);
     core(&m_webView)->mainFrame().view()->paint(&context, enclosingIntRect(rectToPaint));
     context.restore();
+}
+
+float AcceleratedCompositingContext::deviceScaleFactor() const
+{
+    return m_webView.deviceScaleFactor();
 }
 
 #endif // USE(TEXTURE_MAPPER_GL)
